[gd_scene load_steps=2 format=3 uid="uid://model_select_dialog"]

[ext_resource type="Script" path="res://client/scripts/ModelSelectionDialog.gd" id="1_script"]

[node name="ModelSelectionDialog" type="CanvasLayer"]
layer = 12
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Select Local LLM Model"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ModelList" type="ItemList" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 180)
size_flags_vertical = 3
size_flags_horizontal = 3
allow_reselect = true

[node name="Separator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="RefreshBtn" type="Button" parent="Panel/VBox/ButtonRow"]
layout_mode = 2
text = "Refresh"

[node name="LoadBtn" type="Button" parent="Panel/VBox/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load Selected"

[node name="CancelBtn" type="Button" parent="Panel/VBox/ButtonRow"]
layout_mode = 2
text = "Cancel"

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Select a model to load"
horizontal_alignment = 1
autowrap_mode = 2
